--- a/memoire/template.html
+++ b/memoire/template.html
@@ -1,27 +1,5 @@
-<h1 id="1">𝐼. Des nouveaux mondes à bâtir</h1>
-
-<h2 id="1-vierge">1b. Imaginer cet espace vierge</h2>
-
-<h3 id="1-visions">Quels visions pour les réseaux et Internet?</h3>
-
-<ul>
-    <li>ce sera un réseau pour la recherche en général, et non silotée comme on avait pu le voir
-        auparavant
-        (pas besoin de nouveaux réseaux pour des nouveaux champs de recherche)</li>
-    <li>son architecture se déploira entre les villes grâce à des super-ordinateurs qui à son tour se
-        racorderont aux différents sites et campus universitaires</li>
-    <li>il n’y aura pas de limite de connections (toute université ou centre de recherche pourra se
-        brancher
-        au super-ordianteurs de la ville)</li>
-</ul>
-
-
-<section>
-    <span class="footnote-anchor" data-anchor="3"><span> Ce projet sera vu comme une préfiguration sur papier du futur Internet.</span><sup>3</sup></span>
-
-        <div class="footnote" data-footnote="3">
-            <span><sup>3</sup> Dominique Cardon, «Culture Numérique» Paris: Presses de Sciences Po,
-                2019.
-                p50</span>
-        </div>
-</section>
+<i>XXX</i>
+<b>XXX</b>
+«»
+<span class="footnote-anchor" data-anchor="XXX"><span>XXX</span><sup>XXX</sup></span>
+<a target="_blank" href="XXX">XXX</a>
