--- a/sunday-sites/index.html
+++ b/sunday-sites/index.html
@@ -24,6 +24,7 @@
           <li><a href="/sunday-sites/practice">practice</a></li>
           <li><a href="/sunday-sites/changing/">changing</a></li>
           <li><a href="/sunday-sites/travels/">travels</a></li>
+          <li><a href="/sunday-sites/2024/">2024</a></li>
          </ul>
 </div>
 
