--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Primary Meta Tags -->
-  <title>2-a-g-e-s-s-3</title>
+  <title>pablo moreno</title>
   <meta name="title" content="Pablo Moreno">
   <meta name="description"
     content="Pablo Moreno is a energetic web designer, studying in France and working down to Bilbao.">
