--- a/digitalstuff/index.html
+++ b/digitalstuff/index.html
@@ -8,14 +8,18 @@
 
   <style>
     body {
-      margin: 20px;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      margin: 10px;
+      gap: 10px;
       font-family: Arial, Helvetica, sans-serif;
       font-size: 14px;
     }
 
     summary {
       margin: 0;
-      border-bottom: 1px solid gray;
+      border: 1px solid gray;
+      border-width: 1px 1px 1px 1px;
       padding: 4px;
       top: 0;
       position: sticky;
@@ -24,22 +28,22 @@
       font-weight: 900;
     }
 
+    summary:nth-child(2){
+      border-width: 1px 1px 1px 0 !important;
+    }
+
     summary:hover {
       cursor: pointer;
     }
 
     details {
-      border: 1px solid gray;
-      border-width: 1px 1px 0 1px;
-      max-width: 450px;
-    }
-
-    details:nth-child(3), details:nth-child(4){
-      border-width: 0px 1px 0 1px !important;
+      height: fit-content;
     }
 
     details>div {
-      border-bottom: 1px solid gray;
+      border: 1px solid gray;
+      border-width: 0 1px 1px 1px;
+
       padding: 5px;
     }
 
