--- a/soutenance/2.html
+++ b/soutenance/2.html
@@ -17,15 +17,15 @@
     margin:0;
     overflow: hidden;">
 
-    <img src="ui-thewebwewant.png" style="
-    height: 70vh;
+    <img src="ui-thewebwewant.png" id="ui" style="
+    width: 70vw;
     object-fit: contain;
     border-radius: 0 0 8px 8px;
-    box-shadow: 0px 0px 50px -10px white;">
+    box-shadow: 0px 0px 30px -10px #ffffffc1;">
 
-    <video src="video-site.mp4" autoplay style="
+    <video src="cartographie.mp4" style="
     position: absolute;
-    height: 66.6vh;
+    width: 70vw;
     border-radius: 0 0 8px 8px;
     transform: translateY(1.6vh);"></video>
 
