--- a/wip-cartography/index.html
+++ b/wip-cartography/index.html
@@ -106,11 +106,11 @@
         <img src="assets/img/restart.png" class="hoverShadow">
         <span>Relancer</span>
       </div>
-      <div id="buttonRandom">
+      <div id="buttonRandom" class="dim">
         <img src="assets/img/random.png" class="hoverShadow">
         <span>Aléatoire</span>
       </div>
-      <div id="buttonOptions">
+      <div id="buttonOptions" class="dim">
         <img src="assets/img/options.png" class="hoverShadow">
         <span>Options</span>
       </div>
