--- a/soutenance/4.html
+++ b/soutenance/4.html
@@ -23,7 +23,7 @@
     border-radius: 0 0 8px 8px;
     box-shadow: 0px 0px 30px -10px #ffffffc1;">
 
-    <video src="memoire.mp4" style="
+    <video src="memoire.mp4" autoplay style="
     position: absolute;
     width: 70vw;
     border-radius: 0 0 8px 8px;
