--- a/jossnoname/shop.html
+++ b/jossnoname/shop.html
@@ -31,9 +31,8 @@
 </head>
 
 <body>
-  <button onclick="showAll(this)">ALL</button>
-  <button onclick="showRings()">RINGS</button>
-  <button onclick="showBubbles(this)">BUBBLES</button>
+
+  <marquee>This text will scroll from right to left</marquee>
 
   <div id="shopTable"></div>
 
