--- a/new-pablo/index.html
+++ b/new-pablo/index.html
@@ -88,7 +88,7 @@
             </div>
         </div>
 
-        <div id="videoBlock" class="h-full aspect-video relative cursor-help transition">
+        <div id="videoBlock" class="h-full aspect-video relative transition">
             <button id="playButton"
                     class="text-white absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 hover:opacity-70 z-30">(knocking)</button>
 
